--- a/MBMailCore.ClassicTests/MBMailCore.ClassicTests.csproj
+++ b/MBMailCore.ClassicTests/MBMailCore.ClassicTests.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MBMailCore\MBMailCore.csproj" />
+  </ItemGroup>
+
 </Project>
