--- a/MBMailCore.XUnitTests/MBMailCore.XUnitTests.csproj
+++ b/MBMailCore.XUnitTests/MBMailCore.XUnitTests.csproj
@@ -26,4 +26,10 @@
     <ProjectReference Include="..\MBMailCore\MBMailCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="GemBox.Email">
+      <HintPath>..\MBMailCore\External Dependencies\GemBox.Email.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
