Test: Global Test N6

--- a/MBMailCore.ClassicTests/MBMailCore.ClassicTests.csproj
+++ b/MBMailCore.ClassicTests/MBMailCore.ClassicTests.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\MBMailCore\MBMailCore.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="GemBox.Email">
+      <HintPath>..\MBMailCore\External Dependencies\GemBox.Email.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
